<resources>
    <string name="app_name">Orgs</string>
    <string name="cesta_frutas">Cesta de Frutas.</string>
    <string name="nome">Nome</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
</resources>